[gd_scene load_steps=2 format=3 uid="uid://bx8m3n6qaytak"]

[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="1_main_menu"]

[node name="MainMenu" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "MENÜ"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Fortsetzen"

[node name="Separator2" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Speichern"

[node name="LoadButton" type="Button" parent="MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Laden"

[node name="Separator3" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
disabled = true
theme_override_font_sizes/font_size = 18
text = "Einstellungen (TODO)"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
disabled = true
theme_override_font_sizes/font_size = 18
text = "Zum Hauptmenü (TODO)"

[node name="Separator4" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
disabled = true
theme_override_font_sizes/font_size = 18
text = "Spiel beenden (TODO)"
